# CallerAgent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/audio/: stream.py  vad.py
app/bot/: bot_groq.py
app/stt/: stt_groq.py
app/tts/: tts_groq.py
app/utils/: logger.py
config/: config.yaml
