[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calleragent"
version = "0.1.0"
description = "Voice AI system using Groq APIs for real-time speech-to-text, text-to-speech, and conversational AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.11.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-community>=0.3.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "sounddevice>=0.5.0",
    "numpy>=1.26.4",
    "scipy>=1.13.1",
    "webrtcvad>=2.0.10",
    "pyaudio>=0.2.14",
    "simpleaudio>=1.0.4",
    "pydub>=0.25.1",
    "ffmpeg-python>=0.2.0",
    "requests>=2.32.3",
    "aiohttp>=3.10.5",
    "loguru>=0.7.2",
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
    "twilio>=9.2.3",
    "pypdf>=4.3.1",
    "unstructured>=0.15.0",
    "faiss-cpu>=1.8.0",
    "chromadb>=0.5.5",
    "sentence-transformers>=3.0.1",
    "huggingface-hub>=0.24.6",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
"app" = "app"

[tool.uv]
managed = true